ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: itai-ns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: itai-ns
  rules:
    - host: acbd11eb2481445e986dfb02fde514d7-602718039.us-east-1.elb.amazonaws.com 
      http:
        paths:
        - path: /(grafana|login)(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
             service:
              name: itai-ns-kube-prom-stack-grafana
              port:
               number: 80
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wordpress
              port:
                number: 80
